# youtube-video-insights

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: yt-video-analyst.md
.claude/skills/: yt-get-insights.md  yt-get-shorts.md  yt-get-transcript.md  yt-run-pipeline.md
examples/: 20260223 - Florian Bruniaux - 7 mois, 1200 commits, 600 PRs, 50 releases ： REX d'une équipe AI-first de 4 pe... [nfupYzLjFGc].fr.json  20260223 - Florian Bruniaux - 7 mois, 1200 commits, 600 PRs, 50 releases ： REX d'une équipe AI-first de 4 pe... [nfupYzLjFGc].fr.md  20260223 - Florian Bruniaux - 7 mois, 1200 commits, 600 PRs, 50 releases ： REX d'une équipe AI-first de 4 pe... [nfupYzLjFGc].fr.vtt  README.md  prompt-claude-code.md
src/yt_insights/: __init__.py  analyzer.py  cleaner.py  cli.py  config.py  downloader.py  reporter.py  shorts.py  vtt_parser.py  wizard.py
src/yt_insights/backends/: __init__.py  base.py  mlx.py  openai_compat.py
