[project]
name = "yt-insights"
version = "0.1.0"
description = "Extract structured insights from YouTube channel transcripts using any local or cloud LLM"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["youtube", "transcripts", "llm", "yt-dlp", "insights"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "questionary>=2.0",
    "yt-dlp>=2024.1",
]

[project.optional-dependencies]
mlx = ["mlx-lm>=0.15"]

[project.scripts]
yt-insights = "yt_insights.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
